--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,24 +1,43 @@
-# ==========================================
-# CONFIGURACIÓN DE PRODUCCIÓN (DOKPLOY / VPS)
-# ==========================================
+# ===============================
+# APLICACION
+# ===============================
+spring.application.name=Practicas
 server.port=8081
 
-# Conexión a Base de Datos (Usa variables de entorno o valores por defecto seguros)
-# Si Dokploy no envía la variable DB_HOST, intentará buscar 'mysql'
-spring.datasource.url=jdbc:mysql://${DB_HOST:mysql}:3306/${DB_NAME:civil_portal}?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=${DB_USER:civil_app}
-spring.datasource.password=${DB_PASSWORD}
+# ===============================
+# DATASOURCE - MYSQL (XAMPP)
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/civil_portal?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=civil_app
+spring.datasource.password=CivilApp@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA (En producción NO mostramos SQL para no llenar los logs)
+# ===============================
+# JPA / HIBERNATE
+# ===============================
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
-# JWT (Lee la variable o usa un valor temporal si falla)
-app.jwt.secret=${JWT_SECRET}
-app.jwt.expiration-minutes=60
+# ===============================
+# LOGGING
+# ===============================
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# Configuración de Archivos
+# ===============================
+# THYMELEAF
+# ===============================
+spring.thymeleaf.cache=false
+
+# ===============================
+# MULTIPART
+# ===============================
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+# ===============================
+# JWT
+# ===============================
+app.jwt.secret=HOLA_AMIGOS_DE_LA_CARRERA_DE_INGENIERIA_DE_SISTEMAS_SEAN_BIENVENIDOS_AL_TOKENXD
+app.jwt.expiration-minutes=60
