feat: Complete production setup for Dokploy deployment with optimized Dockerfile, prod config, and initialization scripts

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,24 +1,49 @@
 # ==========================================
-# CONFIGURACIÓN DE PRODUCCIÓN (DOKPLOY / VPS)
+# PRODUCCIÓN - DOKPLOY VPS
 # ==========================================
-server.port=8081
 
-# Conexión a Base de Datos (Usa variables de entorno o valores por defecto seguros)
-# Si Dokploy no envía la variable DB_HOST, intentará buscar 'mysql'
-spring.datasource.url=jdbc:mysql://${DB_HOST:mysql}:3306/${DB_NAME:civil_portal}?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=${DB_USER:civil_app}
+# Server
+server.port=8081
+spring.application.name=CivilPortal-API
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/${DB_NAME:civil_portal}?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA (En producción NO mostramos SQL para no llenar los logs)
+# JPA / Hibernate (Producción: sin logs SQL)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
 
-# JWT (Lee la variable o usa un valor temporal si falla)
+# Connection Pool
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+
+# Logging (Minimizar en producción)
+logging.level.root=WARN
+logging.level.solano.com.Practicas=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=WARN
+logging.file.name=/var/log/app/application.log
+logging.file.max-size=10MB
+logging.file.max-history=10
+
+# JWT - USAR VARIABLE DE ENTORNO SEGURA
 app.jwt.secret=${JWT_SECRET}
 app.jwt.expiration-minutes=60
 
-# Configuración de Archivos
+# File Upload
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+# Actuator / Monitoring
+management.endpoints.web.exposure.include=health,metrics
+management.endpoint.health.show-details=always
